--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,8 @@ url: ''
 # Delete the lines you don't need
 # about 5 elements are recomended
 github_username: 'epidrome'
-email: 'hi@epidro.me'
+keybase_username: 'epidrome'
+telegram_username: 'epidrome'
 
 
 avatar: yes
