--- a/_config.yml
+++ b/_config.yml
@@ -10,15 +10,9 @@ github: 'epidrome'
 keybase: 'epidrome'
 telegram: 'epidrome'
 
-
-avatar: yes
-avatar_img_path: 'assets/images/avatar.jpg'
-
-front_img: yes
-front_img_path: 'assets/images/background.jpg'
-
-favicon_img: yes
-favicon_img_path: 'assets/images/favicon.ico'
+avatar: 'assets/images/avatar.jpg'
+background: 'assets/images/background.jpg'
+favicon: 'assets/images/favicon.ico'
 
 
 # Build settings
