--- a/_config.yml
+++ b/_config.yml
@@ -10,9 +10,9 @@ github: 'epidrome'
 keybase: 'epidrome'
 telegram: 'epidrome'
 
-avatar: 'assets/images/avatar.jpg'
-background: 'assets/images/background.jpg'
-favicon: 'assets/images/favicon.ico'
+avatar: 'avatar.jpg'
+background: 'background.jpg'
+favicon: 'favicon.ico'
 
 
 # Build settings
