--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ description: 'surfer & scholar.'
 github: 'epidrome'
 keybase: 'epidrome'
 telegram: 'epidrome'
+scholar: 'https://users.ionio.gr/choko/'
 
 # Images
 avatar: 'avatar.jpg'
