--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description: 'surfer & scholar.'
 github: 'epidrome'
 keybase: 'epidrome'
 telegram: 'epidrome'
-scholar: 'https://users.ionio.gr/choko/'
+scholar: 'https://scholar.epidro.me'
 
 # Images
 avatar: 'avatar.jpg'
