--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ description: 'surfer & scholar.'
 github: 'epidrome'
 keybase: 'epidrome'
 telegram: 'epidrome'
+snapchat: 'epidrome'
 scholar: 'http://scholar.epidro.me'
 
 # Images
