--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: 'surfer & scholar.'
 # Online profiles
 github: 'epidrome'
 telegram: 'epidrome'
-scholar: 'http://scholar.epidro.me'
+scholar: 'http://users.ionio.gr/choko/'
 
 # Images
 avatar: 'avatar.jpg'
