--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: 'epidrome'
 description: 'surfer & scholar.'
 
 # Online profiles
-github: 'epidrome'
+github-user: 'epidrome'
 telegram: 'epidrome'
 scholar: 'http://scholar.epidro.me'
 
