--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: 'surfer & scholar.'
 
 # Online profiles
 github-user: 'epidrome'
-telegram: 'epidrome'
+# telegram: 'epidrome'
 scholar: 'http://scholar.epidro.me'
 
 # Images
