--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,8 @@ title: 'epidrome'
 description: 'surfer & scholar.'
 
 # Online profiles
-github-user: 'epidrome'
+keybase: 'epidrome'
+tumblr: 'epidrome'
 scholar: 'http://scholar.epidro.me'
 
 # Images
