--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 remote_theme: epidrome/cover-card@main
 
 # Site Settings
-title: 'epidrome'
-description: 'surfer & scholar.'
+title: 'surfer & scholar'
+description: 'with the resistance, fighting zombies.'
 
 # Online profiles
 surfer: 'surfer.epidro.me'
